--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 .cart-item{
   
-  display: flex;
+  display: inline-flex;
   /* inline-flex */
   margin: 20px 10px;
   padding: 5px 5px;
